2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community.step) :
	updated
	* interfaces/R/src/rinterface.c.in 
	(R_igraph_community_leading_eigenvector_step) : removed, generated by 
	stimulus

2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) 
	* interfaces/R/src/rinterface.c.in (R_igraph_community_leading_eigenvector)
	: removed, generated by stimulus

2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_bliss_info_to_SEXP) : added

2007-12-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/CohesiveBlocks.R : updates, bugfix in kCutsets,
	cleanup

2007-12-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/print.R (print.igraph) : better printing of
	attributes

	* interfaces/R/igraph/R/CohesiveBlocks.R (max.cohesion, maxcohesion) : 
	renamed

	* interface/R/igraph/R/CohesiveBlocks.R (layout.byblock, dyadAsymmetry) :
	removed
	(cohesive.blocks, recalc.tree.bgraph, print.bgraph, plot.bgraph) :
	many small modifications
	(is.bgraph) : added
	
	* interfaces/R/igraph/R/CohesiveBlocks.R 
	* interfaces/R/igraph/R/layout.R (layout.mds, layout.svd)
	(piecewise.layout) : moved

2007-12-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks)
	(recalc.tree.bgraph, print.bgraph, plot.bgraph, max.cohesion)
	(plot.kCore.bgraph, write.pajek.bgraph, write.pajek.kCore.bgraph)
	(piecewise.layout, expand.layout, layout.byblock, dyadAsymmetry) : added 

	* interfaces/R/igraph/R/iterators.R ($.igraph, $<-.igraph) : added

	* interfaces/R/igraph/R/print.R (print.igraph) : use the 'print' method
	of complex attributes

2007-11-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/centrality.R (igraph.arpack.default) : updated
	* interfaces/R/src/rinterface.c.in (R_SEXP_to_igraph_arpack_options)